nav overflow fix

--- a/src/app/navigation/navigation.component.sass
+++ b/src/app/navigation/navigation.component.sass
@@ -129,8 +129,6 @@ li.nav-item .nav-link:hover
 .fs
   font-size: 1em
 
-.fsMobile
-  font-size: 0.8em
 
 .faSymbol
   font-size: 1.5em
